--- a/templates/login.html
+++ b/templates/login.html
@@ -6,18 +6,47 @@
 
 <div class="container mx-auto prose">
   <h1>Login</h1>
-  <form action="/login" method="post" class="flex flex-col gap-2">
-    <input type="text" name="username" id="username" autocomplete="username" placeholder="Username" class="input input-bordered w-full">
-    <input type="password" name="password" id="password" autocomplete="current-password" placeholder="Password" class="input input-bordered w-full">
-    {% match error %}
-      {% when Some with (LoginError::BadValidation) %}
-        <div class="alert alert-error">
-          Field Validation Error
-        </div>
-      {% when None %}
-    {% endmatch %}
+  <form
+    hx-ext="form-validation"
+    action="/login"
+    method="post"
+    class="flex flex-col gap-2 group"
+    novalidate
+  >
+    <div>
+      <label for="username" class="label">
+        <span class="label-text">Username</span>
+      </label>
+      <input
+        type="text"
+        name="username"
+        id="username"
+        autocomplete="username"
+        class="input input-bordered w-full group-[.was-validated]:invalid:input-error"
+        required
+        minlength="3"
+      />
+    </div>
+    <div>
+      <label for="password" class="label">
+        <span class="label-text">Password</span>
+      </label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        autocomplete="current-password"
+        class="input input-bordered w-full group-[.was-validated]:invalid:input-error"
+        required
+        minlength="8"
+      />
+    </div>
+    {% match error %} {% when Some with (LoginError::BadValidation) %}
+    <div class="alert alert-error">Field Validation Error</div>
+    {% when None %} {% endmatch %}
     <button class="btn btn-primary">Login</button>
   </form>
 </div>
+<script src="/scripts/forms.js"></script>
 
 {% endblock %}
