--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-<!-- prettier-ignore -->
 {% extends "base.html" %} 
 {% block title %}Login{% endblock %}
  
@@ -41,9 +40,9 @@
         minlength="8"
       />
     </div>
-    {% match error %} {% when Some with (LoginError::BadValidation) %}
+    {% if error %}
     <div class="alert alert-error">Field Validation Error</div>
-    {% when None %} {% endmatch %}
+    {% endif %}
     <button class="btn btn-primary">Login</button>
   </form>
 </div>
